--- a/indexJS.html
+++ b/indexJS.html
@@ -1,5 +1,5 @@
 helllo js rocket
 
 <script type="text/javascript">
-	console.log('hello there friends!');
+	consol .log('hello there friends!');
 </script>
